--- a/FacadePlatform/src/main/resources/templates/footer.html
+++ b/FacadePlatform/src/main/resources/templates/footer.html
@@ -1,7 +1,17 @@
 <div xmlns:th="http://www.thymeleaf.org">
-    <div th:fragment="footer">
-
-    </div>
+    <footer th:fragment="footer">
+        <div class="pull-right hidden-xs">
+            <b>Version</b>
+            1.0.0
+        </div>
+        <strong>
+            Copyright © 2018-2019
+            <span>iSE lab</span>
+            .
+        </strong>
+        All rights
+        reserved.
+    </footer>
     <div th:fragment="script">
         <!-- jQuery 2.2.3 -->
         <script src="/static/plugins/jQuery/jquery-2.2.3.min.js"></script>
